deploy/chart/templates/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: furniture-replications
  namespace: furniture-replications
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: furniture-replications
