deploy/chart/templates/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: furniture-replications
  namespace: furniture-replications
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
    certmanager.k8s.io/acme-challenge-type: http01
spec:
  tls:
  - hosts:
    - furniturereplications.com
    - www.furniturereplications.com
    secretName: furniture-replications-tls
  rules:
  - host: furniturereplications.com
    http:
      paths:
      - path: /
        backend:
          serviceName: furniture-replications
          servicePort: 80
  - host: www.furniturereplications.com
    http:
      paths:
      - path: /
        backend:
          serviceName: furniture-replications
          servicePort: 80
